--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: Jesus Molina Consulting
-description: Security expert in industrial IoT
-url: https://nomellames.github.io
-baseurl: /jesusmolina-staging
-author: Jesus Molina
-email: contact@jesusmolina.com
-version: v1.0.1
-lsi: false
-highlighter: rouge
+title:    "Jesus Molina"
+author:   Jesus Molina
+email:    contact@jesusmolina.com
+lsi:      false
+highlighter: pygments
 auto: true
 server: true
 port: 4000
+baseurl:    /
+url: http://www.jesusmolina.com
+markdown: Kramdown 
+url_root: http://www.jesumolina.com
